@@ -1,6 +1,6 @@
 /* mpz_mul -- Multiply two integers.
 
-Copyright 1991, 1993, 1994, 1996, 2000, 2001, 2005, 2009, 2011 Free
+Copyright 1991, 1993, 1994, 1996, 2000, 2001, 2005, 2009, 2011, 2012 Free
 Software Foundation, Inc.
 
 This file is part of the GNU MP Library.
@@ -58,8 +58,7 @@ mpz_mul (mpz_ptr w, mpz_srcptr u, mpz_srcptr v)
 #if HAVE_NATIVE_mpn_mul_2
   if (vsize <= 2)
     {
-      MPZ_REALLOC (w, usize+vsize);
-      wp = PTR (w);
+      wp = MPZ_REALLOC (w, usize+vsize);
       if (vsize == 1)
 	cy_limb = mpn_mul_1 (wp, PTR (u), usize, PTR (v)[0]);
       else
@@ -75,8 +74,7 @@ mpz_mul (mpz_ptr w, mpz_srcptr u, mpz_srcptr v)
 #else
   if (vsize == 1)
     {
-      MPZ_REALLOC (w, usize+1);
-      wp = PTR (w);
+      wp = MPZ_REALLOC (w, usize+1);
       cy_limb = mpn_mul_1 (wp, PTR (u), usize, PTR (v)[0]);
       wp[usize] = cy_limb;
       usize += (cy_limb != 0);
